--- a/index.html
+++ b/index.html
@@ -1,40 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
-
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="main">
+    <div class="main__faq">
+      <img class="main__faq__box" src="images/illustration-box-desktop.svg" alt="illustration-box">
+      <div class="main__images-box">
+        <img class="images-box__bg-pattern" src="images/bg-pattern-desktop.svg" alt="bg-pattern">
+        <img class="images-box__woman" src="images/illustration-woman-online-desktop.svg" alt="illustration-woman">
+      </div>
+      <div class="main__text-box">
+        <h1 class="big-heading">FAQ</h1>
+        <div class="main__faq-boxes">
+          <div class="main__question-box">
+            <div class="another-box">
+              <h2 class="question-text q1">How many team members can I invite?</h2>
+              <img class="arrow arrow-1" src="images/icon-arrow-down.svg" alt="arrow">
+            </div>
+            <h3 class="answer-text a1">You can invite up to 2 additional users on the Free plan. There is no limit on
+              team members for the Premium plan.</h3>
+          </div>
+          <hr class="text-box__line">
+          <div class="main__question-box">
+            <div class="another-box">
+            <h2 class="question-text q2">What is the maximum file upload size?</h2>
+            <img class="arrow arrow-2" src="images/icon-arrow-down.svg" alt="arrow">
+          </div>
+            <h3 class="answer-text a2">No more than 2GB. All files in your account must fit your allotted storage space.</h3>
+          </div>
+          <hr class="text-box__line">
+          <div class="main__question-box">
+            <div class="another-box">
+            <h2 class="question-text q3">How do I reset my password?</h2>
+            <img class="arrow arrow-3" src="images/icon-arrow-down.svg" alt="arrow">
+          </div>
+            <h3 class="answer-text a3">Click “Forgot password” from the login page or “Change password” from your profile page.
+              A reset link will be emailed to you.</h3>
+          </div>
+          <hr class="text-box__line">
+          <div class="main__question-box">
+            <div class="another-box">
+            <h2 class="question-text q4">Can I cancel my subscription?</h2>
+            <img class="arrow arrow-4" src="images/icon-arrow-down.svg" alt="arrow">
+          </div>
+            <h3 class="answer-text a4">Yes! Send us a message and we’ll process your request no questions asked.</h3>
+          </div>
+          <hr class="text-box__line">
+          <div class="main__question-box">
+            <div class="another-box">
+            <h2 class="question-text q5">Do you provide additional support?</h2>
+            <img class="arrow arrow-5" src="images/icon-arrow-down.svg" alt="arrow">
+          </div>
+            <h3 class="answer-text a5">Chat and email support is available 24/7. Phone lines are open during normal business hours.</h3>
+          </div>
+        </div>
+        <hr class="text-box__line">
+      </div>
+    </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  <script src="index.js" charset="utf-8"></script>
 </body>
+
 </html>
